fix: add overflow styles to code group preview

--- a/website/app/styles/doc-components/code-group.scss
+++ b/website/app/styles/doc-components/code-group.scss
@@ -95,6 +95,7 @@ $doc-code-group-footer-height: 48px; // 32px button height + 16px bottom padding
 
 .doc-code-group__preview {
   padding: 16px;
+  overflow: auto;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2 2'%3E%3Cpath d='M1 2V0h1v1H0v1z' fill-opacity='.05'/%3E%3C/svg%3E");
   // use this to fine tune the size of the checkered pattern
   background-size: 16px 16px;
